✨ feat: add flink init and job process configuration